--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ body {
 	display: none;
 }
 .peach {
-	background-color: #FFDAB9;
+	background-color: #FFC1CC;
 	
 }
 .peach-after {
@@ -25,92 +25,93 @@ body {
 
 @-webkit-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #FFC1CC;
 	}
 	25%{
-		background-color: #FFE4B5;
+		background-color: #FFB6C1;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #FF99CC;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #DDA0DD;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #DA70D6;
 	}
 }
 @-moz-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #FFC1CC;
 	}
 	25%{
-		background-color: #FFE4B5;
+		background-color: #FFB6C1;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #FF99CC;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #DDA0DD;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #DA70D6;
 	}
 }
 
 @-o-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #FFC1CC;
 	}
 	25%{
-		background-color: #FFE4B5;
+		background-color: #FFB6C1;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #FF99CC;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #DDA0DD;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #DA70D6;
 	}
 }
 
 @-ms-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #FFC1CC;
 	}
 	25%{
-		background-color: #FFE4B5;
+		background-color: #FFB6C1;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #FF99CC;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #DDA0DD;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #DA70D6;
 	}
 }
 
 @keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background-color: #FFC1CC;
 	}
 	25%{
-		background-color: #FFE4B5;
+		background-color: #FFB6C1;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background-color: #FF99CC;
 	}
 	75%{
-		background-color: #FFEFD5;
+		background-color: #DDA0DD;
 	}
 	100%{
-		background-color: #FFDAB9;
+		background-color: #DA70D6;
 	}
 }
+
 
 
 .bulb {
